--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
                     android:scaleType="centerInside"
-                    android:src=""
+                    android:src="@mipmap/clean"
                     android:visibility="gone"/>
             </LinearLayout>
             <View
@@ -96,15 +96,16 @@
                    android:hint="请输入验证码"
                    android:inputType="number"
                    android:maxLength="30"
+                   android:background="@null"
                    android:text=""
                    android:textColor="@color/colorText"
-                   android:textSize="14sp"/>
+                   android:textSize="14sp" />
                <ImageView
                    android:id="@+id/clean_yanzhnegma"
                    android:layout_width="40dp"
                    android:layout_height="fill_parent"
                    android:scaleType="centerInside"
-                   android:src=""
+                   android:src="@mipmap/clean"
                    android:visibility="gone" />
                <Button
                    android:id="@+id/get_identifyingcode"
@@ -130,10 +131,9 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_btn_login_selected"
                 android:text="登陆"
-                android:textColor="@color/colorDefault"
+                android:textColor="#ffffff"
                 android:textSize="18sp"
                 />
-
             <android.support.percent.PercentRelativeLayout
                 android:layout_below="@+id/btn_login"
                 android:id="@+id/two_platform_login"
@@ -153,7 +153,7 @@
                     app:layout_marginStartPercent="20%"
                     app:layout_marginTopPercent="20%"
                     android:scaleType="centerCrop"
-                    android:src="@mipmap/icon_qq"
+                    android:src="@drawable/icon_qq"
                     android:layout_alignParentLeft="true" />
 
 
@@ -169,13 +169,12 @@
                     app:layout_marginEndPercent="20%"
                     app:layout_marginTopPercent="20%"
                     android:scaleType="centerCrop"
-                    android:src="@mipmap/icon_wechat"
+                    android:src="@drawable/icon_wechat"
                     android:layout_alignParentRight="true" />
 
             </android.support.percent.PercentRelativeLayout>
 
         </android.support.percent.PercentRelativeLayout>
-
     </ScrollView>
     <LinearLayout
         android:id="@+id/service"
