--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,6 @@
         android:layout_centerHorizontal="true"
         android:src="@mipmap/logo"
         app:layout_marginTopPercent="10%"
-        android:scaleType="centerCrop"
         android:padding="1px"
         app:layout_heightPercent="20%"
         app:layout_widthPercent="30%" />
@@ -30,7 +29,8 @@
         android:scrollbarThumbVertical="@android:color/transparent"
         android:scrollbars="vertical"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true">
         
         <android.support.percent.PercentRelativeLayout
             android:id="@+id/login_content"
