--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -11,15 +11,15 @@
         android:layout_height="wrap_content">
     </android.support.v4.view.ViewPager>
 
-    <Button
-        android:layout_marginBottom="70dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/but_tologin"
-        android:text="开启你的专属记忆卡片"
-        android:textColor="#ffffff"
-        android:textSize="18sp"
-        android:background="@drawable/bg_btn_login_selected"/>
+    <!--<Button-->
+        <!--android:layout_marginBottom="70dp"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/but_tologin"-->
+        <!--android:text="开启你的专属记忆卡片"-->
+        <!--android:textColor="#ffffff"-->
+        <!--android:textSize="18sp"-->
+        <!--android:background="@drawable/bg_btn_login_selected"/>-->
 </RelativeLayout>
