--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.hasee.cardreviewv3.activity.MainActivity">
-    <include layout="@layout/review_title"/>
+    <!--<include layout="@layout/review_title"/>-->
 
 
     <LinearLayout
