--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -1,10 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <!--&lt;!&ndash;头部栏&ndash;&gt;-->
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="190dp"-->
+        <!--android:orientation="vertical">-->
+        <!--<TextView-->
+            <!--android:id="@+id/tv_mine_name"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:gravity="center"-->
+            <!--android:textColor="#222222"-->
+            <!--android:text="笑笑"-->
+            <!--android:textSize="25sp"-->
+            <!--android:layout_marginTop="15dp"/>-->
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_mine_photo"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_height="90dp"-->
+            <!--android:layout_width="90dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:src="@mipmap/photo"-->
+            <!--/>-->
+        <!--<LinearLayout-->
+            <!--android:orientation="horizontal"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:layout_gravity="center_horizontal">-->
+
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:text="学习等级:"-->
+                <!--android:textColor="#888888" />-->
+            <!--<TextView-->
+                <!--android:id="@+id/tv_level"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_marginLeft="20dp"-->
+                <!--android:text="普通"-->
+                <!--android:textColor="@color/colorbagname" />-->
+
+        <!--</LinearLayout>-->
+
+    <!--</LinearLayout>-->
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="我是四"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="啊啊啊啊啊啊啊啊啊啊啊啊我疯了"/>
 
 </LinearLayout>
