--- a/app/src/main/res/layout/guidance02.xml
+++ b/app/src/main/res/layout/guidance02.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--第二个引导页 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.hasee.cardreviewv3.activity.WelcomeActivity">
-
+    android:layout_height="match_parent">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@mipmap/logo"/>
+        android:src="@mipmap/leadpage2"/>
 
 </LinearLayout>
