--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -2,56 +2,203 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-
-    <!--&lt;!&ndash;头部栏&ndash;&gt;-->
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="190dp"-->
-        <!--android:orientation="vertical">-->
-        <!--<TextView-->
-            <!--android:id="@+id/tv_mine_name"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:gravity="center"-->
-            <!--android:textColor="#222222"-->
-            <!--android:text="笑笑"-->
-            <!--android:textSize="25sp"-->
-            <!--android:layout_marginTop="15dp"/>-->
-        <!--<ImageView-->
-            <!--android:id="@+id/iv_mine_photo"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:layout_height="90dp"-->
-            <!--android:layout_width="90dp"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:src="@mipmap/photo"-->
-            <!--/>-->
-        <!--<LinearLayout-->
-            <!--android:orientation="horizontal"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="5dp"-->
-            <!--android:layout_gravity="center_horizontal">-->
-
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:text="学习等级:"-->
-                <!--android:textColor="#888888" />-->
-            <!--<TextView-->
-                <!--android:id="@+id/tv_level"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_marginLeft="20dp"-->
-                <!--android:text="普通"-->
-                <!--android:textColor="@color/colorbagname" />-->
-
-        <!--</LinearLayout>-->
-
-    <!--</LinearLayout>-->
-    <TextView
+    <!--头部栏-->
+    <LinearLayout
+        android:background="@color/colorBackground"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="啊啊啊啊啊啊啊啊啊啊啊啊我疯了"/>
+        android:layout_height="170dp"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_mine_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="#222222"
+            android:text="笑笑"
+            android:textSize="25sp"
+            android:layout_marginTop="10dp"/>
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/iv_mine_photo"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="90dp"
+            android:layout_width="90dp"
+            android:layout_marginTop="10dp"
+            app:riv_border_color="#333333"
+            app:riv_border_width="2dp"
+            app:riv_oval="true"
+            android:src="@drawable/icon_photo"
+            />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center_horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="学习等级:"
+                android:textColor="#888888" />
+            <TextView
+                android:id="@+id/tv_level"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:text="普通"
+                android:textColor="#444444" />
+        </LinearLayout>
+    </LinearLayout>
+   <LinearLayout
+       android:layout_marginTop="15dp"
+       android:background="@color/colorBackground"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+
+       <LinearLayout
+           android:id="@+id/ll_mine_ueser"
+           android:padding="15dp"
+           android:orientation="horizontal"
+           android:background="@color/white"
+           android:layout_width="match_parent"
+           android:layout_height="55dp">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center_vertical"
+               android:layout_weight="2"
+               android:text="普通用户"
+               android:textColor="@color/titleText"
+               android:textSize="20sp" />
+           <ImageView
+               android:src="@drawable/icon_more"
+               android:layout_gravity="center_vertical"
+               android:layout_weight="0.05"
+               android:layout_width="25dp"
+               android:layout_height="25dp" />
+       </LinearLayout>
+       <View
+           android:layout_marginLeft="20dp"
+           android:layout_marginRight="20dp"
+           android:layout_width="match_parent"
+           android:layout_height="1dp"
+           android:background="#dcdcdc"/>
+       <LinearLayout
+           android:id="@+id/ll_mine_weektask"
+           android:padding="15dp"
+           android:orientation="horizontal"
+           android:background="@color/white"
+           android:layout_width="match_parent"
+           android:layout_height="55dp">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center_vertical"
+               android:layout_weight="2"
+               android:text="本周任务"
+               android:textColor="@color/titleText"
+               android:textSize="20sp" />
+           <ImageView
+               android:src="@drawable/icon_more"
+               android:layout_gravity="center_vertical"
+               android:layout_weight="0.05"
+               android:layout_width="25dp"
+               android:layout_height="25dp" />
+       </LinearLayout>
+
+       <View
+           android:layout_marginLeft="20dp"
+           android:layout_marginRight="20dp"
+           android:layout_width="match_parent"
+           android:layout_height="1dp"
+           android:background="#dcdcdc"/>
+
+       <LinearLayout
+           android:id="@+id/ll_mine_memoryway"
+           android:padding="15dp"
+           android:orientation="horizontal"
+           android:background="@color/white"
+           android:layout_width="match_parent"
+           android:layout_height="55dp">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center_vertical"
+               android:layout_weight="2"
+               android:text="记忆曲线"
+               android:textColor="@color/titleText"
+               android:textSize="20sp" />
+           <ImageView
+               android:src="@drawable/icon_more"
+               android:layout_gravity="center_vertical"
+               android:layout_weight="0.05"
+               android:layout_width="25dp"
+               android:layout_height="25dp" />
+       </LinearLayout>
+
+       <View
+           android:layout_marginLeft="20dp"
+           android:layout_marginRight="20dp"
+           android:layout_width="match_parent"
+           android:layout_height="1dp"
+           android:background="#dcdcdc"/>
+
+       <LinearLayout
+           android:id="@+id/ll_mine_game"
+           android:padding="15dp"
+           android:orientation="horizontal"
+           android:background="@color/white"
+           android:layout_width="match_parent"
+           android:layout_height="55dp">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center_vertical"
+               android:layout_weight="2"
+               android:text="游戏情况"
+               android:textColor="@color/titleText"
+               android:textSize="20sp" />
+           <ImageView
+               android:src="@drawable/icon_more"
+               android:layout_gravity="center_vertical"
+               android:layout_weight="0.05"
+               android:layout_width="25dp"
+               android:layout_height="25dp" />
+       </LinearLayout>
+       <View
+           android:layout_marginLeft="20dp"
+           android:layout_marginRight="20dp"
+           android:layout_width="match_parent"
+           android:layout_height="1dp"
+           android:background="#dcdcdc"/>
+
+       <LinearLayout
+           android:id="@+id/ll_mine_feedback"
+           android:padding="15dp"
+           android:orientation="horizontal"
+           android:background="@color/white"
+           android:layout_width="match_parent"
+           android:layout_height="55dp">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center_vertical"
+               android:layout_weight="2"
+               android:text="意见反馈"
+               android:textColor="@color/titleText"
+               android:textSize="20sp" />
+           <ImageView
+               android:src="@drawable/icon_more"
+               android:layout_gravity="center_vertical"
+               android:layout_weight="0.05"
+               android:layout_width="25dp"
+               android:layout_height="25dp" />
+       </LinearLayout>
+
+   </LinearLayout>
 
 </LinearLayout>
+
