--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="coloricon">#a508c75d</color>
     <color name="colorbar">#66FF66</color>
     <color name="colorPrimary">#00bcd3</color>
     <color name="colorPrimaryDark">#0097a7</color>
