--- a/app/src/main/res/layout/freedback_bar.xml
+++ b/app/src/main/res/layout/freedback_bar.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="15dp">
     <ImageView
         android:layout_width="25dp"
-        android:layout_height="match_parent"
+        android:layout_height="25dp"
         android:id="@+id/iv_back"
         android:src="@drawable/icon_return"/>
 
