--- a/app/src/main/res/layout/mine_score_bar.xml
+++ b/app/src/main/res/layout/mine_score_bar.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:gravity="center"
-        android:text="会员升级"
+        android:text="我的积分"
         android:layout_toRightOf="@id/iv_back"
         android:textSize="18sp"
         android:textColor="#222222"
