--- a/app/src/main/res/layout/weektask_bar.xml
+++ b/app/src/main/res/layout/weektask_bar.xml
@@ -9,8 +9,9 @@
     android:paddingRight="10dp"
     android:paddingLeft="15dp">
     <ImageView
+        android:layout_marginTop="5dp"
         android:layout_width="25dp"
-        android:layout_height="match_parent"
+        android:layout_height="25dp"
         android:id="@+id/iv_back"
         android:src="@drawable/icon_return"/>
 
