--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
     <!--轮播图-->
-    <AdapterViewFlipper
+
+    <com.ryane.banner.AdPlayBanner
         android:id="@+id/iv_banner"
         android:layout_width="match_parent"
-        android:layout_height="150dp"></AdapterViewFlipper>
+        android:layout_height="185dp"
+        android:filterTouchesWhenObscured="true">
+    </com.ryane.banner.AdPlayBanner>
+    <include
+        android:layout_marginTop="30dp"
+        layout="@layout/search_title"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
 
-</LinearLayout>
+</RelativeLayout>
