把选择卡包这块的dialog写完了

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,13 +9,17 @@
     </style>
     <!--dialog的样式-->
     <style name="dialogTheme" parent="android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item><!--是否浮现在activity之上-->
         <item name="android:windowIsTranslucent">true</item><!--半透明-->
-        <item name="android:backgroundDimEnabled">true</item><!--模糊-->
+        <item name="android:backgroundDimEnabled">false</item><!--模糊-->
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/dialogtextcolor</item>
+        <!--设置动画，在这里使用让它继承系统的Animation.Dialog-->
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <!--设置窗口内容不覆盖-->
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 
 </resources>
