--- a/app/src/main/res/layout/activity_dialogchoosebag.xml
+++ b/app/src/main/res/layout/activity_dialogchoosebag.xml
@@ -1,29 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="20dp"
     android:background="@drawable/dialog_shape">
     <LinearLayout
-        android:id="@+id/dia_title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/tv_dialogtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.8"
             android:text="卡包分类"
             android:textSize="20dp"
             android:textColor="@color/titleText"/>
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_weight="0.2"
-            android:src="@mipmap/icon_cancel"/>
+
     </LinearLayout>
     <ExpandableListView
         android:id="@+id/elv_cardkind"
@@ -31,5 +26,6 @@
         android:layout_height="match_parent"
         android:layoutDirection="rtl">
     </ExpandableListView>
+
 
 </LinearLayout>
