--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -60,10 +60,13 @@
                 android:gravity="center"
                 android:background="@color/colorBackground"
                 android:hint="选择卡片"/>
-
         </LinearLayout>
-
-
+        <LinearLayout
+            android:id="@+id/ll_addView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingTop="20dp">
+        </LinearLayout>
     </LinearLayout>
-
 </ScrollView>
