--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1px"
                 android:background="@color/colorHuaXian"/>
-            <!--验证码-->
+            <!--密码-->
            <LinearLayout
                android:id="@+id/lv_cord"
                app:layout_marginTopPercent="45%"
@@ -89,29 +89,21 @@
                android:paddingEnd="13dp">
 
                <EditText
-                   android:id="@+id/et_identifyingcode"
+                   android:id="@+id/et_keypasscode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
-                   android:hint="请输入验证码"
-                   android:inputType="number"
-                   android:maxLength="30"
+                   android:hint="请输入密码"
+                   android:inputType="textPassword"
+                   android:maxLength="11"
                    android:background="@null"
-                   android:text=""
                    android:textColor="@color/colorText"
                    android:textSize="14sp" />
-               <ImageView
-                   android:id="@+id/clean_yanzhnegma"
-                   android:layout_width="40dp"
-                   android:layout_height="fill_parent"
-                   android:scaleType="centerInside"
-                   android:src="@mipmap/clean"
-                   android:visibility="gone" />
                <Button
-                   android:id="@+id/get_identifyingcode"
+                   android:id="@+id/btn_gotoregister"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
-                   android:text="获取验证码"
+                   android:text="注册账号"
                    android:textSize="13sp"
                    android:background="@drawable/bg_btn_yzm"
                    android:textColor="@color/colorblue" />
@@ -121,6 +113,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1px"
                 android:background="@color/colorHuaXian" />
+
             <Button
                 app:layout_marginTopPercent="60%"
                 app:layout_heightPercent="10%"
