--- a/app/src/main/res/layout/add_bag_bar.xml
+++ b/app/src/main/res/layout/add_bag_bar.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="50dp">
     <ImageView
-        android:id="@+id/iv_back1"
+        android:id="@+id/iv_back"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_centerVertical="true"
