--- a/app/src/main/res/layout/activity_add_bag.xml
+++ b/app/src/main/res/layout/activity_add_bag.xml
@@ -58,18 +58,26 @@
                 android:textSize="16sp"
                 android:textColor="@color/titleText"
                 android:layout_weight="0.01"/>
-           <ImageView
-               android:id="@+id/iv_bag_cover"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:layout_gravity="center_vertical"
-               android:layout_weight="4"/>
+
+
             <ImageView
-                android:id="@+id/iv_select_cover"
-                android:layout_width="30dp"
+                android:id="@+id/iv_bag_cover1"
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="25dp"
+                android:layout_weight="2" />
+
+
+            <Button
+                android:id="@+id/btn_bag_choosebagcover"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.1"
-                android:src="@drawable/icon_more"/>
+                android:layout_weight="4.25"
+                android:gravity="center"
+                android:background="@color/colorBackground"
+                android:hint="选择卡包封面"/>
         </LinearLayout>
 
         <View
